# tableone

./: .gitignore  .readthedocs.yml  .travis.yml  CITATION.cff  LICENSE  MANIFEST.in  README.md  README.rst  modality.py  pyproject.toml  requirements.txt  setup.py  tableone.ipynb  tableone.py  test_tableone.py
.github/workflows/: python-package.yml
data/: pn2012_demo.csv
datasets/: pbc.csv  rhc.csv
docs/: Makefile  README.rst  api.rst  bestpractice.rst  conf.py  contributing.rst  index.rst  install.rst  make.bat  quickstart.rst  tableone.rst
tableone/: __init__.py  deprecations.py  exceptions.py  formatting.py  modality.py  preprocessors.py  statistics.py  tableone.py  tables.py  validators.py
tableone/data/: hartigan_p_values.csv
tests/: test_histograms.py
tests/unit/: test_tableone.py
