[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tableone"
version = "0.9.1"
authors = [
  { name="Tom Pollard", email="tpollard@mit.edu" },
  { name="Alistair Johnson" },
  { name="Jesse Raffa" }
]
license = {file = "LICENSE"}
description = "tableone is a package for creating 'Table 1' summary statistics for a patient population."
readme = "README.md"
requires-python = ">=3.9"
keywords=["Table one", "Table 1", "statistics", "cohort", "clinical research"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Jinja2 >= 3.1.4",
    "numpy >= 1.19.1",
    "openpyxl >= 3.1.2",
    "pandas >= 2.0.3",
    "scipy >= 1.10.1",
    "statsmodels >= 0.14.1",
    "tabulate >= 0.9.0",
]

[tool.black]
line-length = 119

[tool.pyright]
reportMissingImports = true

[project.urls]
homepage = "https://github.com/tompollard/tableone/"
documentation = "https://tableone.readthedocs.io/"
repository = "https://github.com/tompollard/tableone/"
